# llm-tsp-heuristics

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: run_llamea_dense.yaml  run_llamea_popmusic_candidates.yaml  run_prior_ablation.yaml  tsp_large_suite.yaml
data/: README.md  external_inputs_manifest.csv  instance_suite_1kplus.csv  tsp_instances_opt.csv
docs/: edge_prior_historical_family_avoidance.md  methodology.md  popmusic_candidates.md  prompt_design.md  relation_to_clustering.md  results_summary.md
docs/prompt_reference/: README.md  exact_tsp_prompt_blocks.ipynb  exact_tsp_prompt_blocks.py
experiments/: README.md
experiments/reference_summaries/: popmusic_prior_summary.csv  selected_instance_level_results.csv  selected_llamea_results.csv
experiments/selected_tsp_heuristics_final_by_signal/: APPENDIX_CODE_COVERAGE_AUDIT.json  APPENDIX_CODE_COVERAGE_AUDIT.md  APPENDIX_METHODS_INDEX.csv  INDEX_selected_tsp_heuristics.csv  README.md  (+3 more)
notebooks/: 00_tsp_colab_launcher.ipynb
scripts/: build_popmusic_candidates.py  run_prior_ablation.py  run_unified_tsp_pipeline.py  summarize_tsp_runs.py
server_eval/: README_SERVER_EVAL.md  build_large_tsp_caches.py  prepare_tsp_signal_cpp_inputs.py  run_selected_tsp_eval.py  run_tsp_eval.sh  setup_server_env.sh  tsp_cpp_distance_eval.cpp  tsp_cpp_signal_eval.cpp  tsp_distance_baselines_impl.py
tests/: test_candidate_sets.py  test_distance.py  test_evaluation.py  test_lkh_popmusic.py  test_llamea_loop.py  test_llm_client.py  test_notebook_runtime.py  test_pipeline_smoke.py  test_prompts.py
(+199 files in other folders)
