[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tsp-heuristics"
version = "0.1.0"
description = "Colab-first LLaMEA-style TSP heuristic generation with optional POPMUSIC/LKH priors."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "tqdm>=4.66",
  "tsplib95>=0.7.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
